WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279455
[masonry] Fix masonry-intrinsic-sizing-rows-001 and masonry-intrinsic-sizing-rows-006
https://bugs.webkit.org/show_bug.cgi?id=279455
Summary
[masonry] Fix masonry-intrinsic-sizing-rows-001 and masonry-intrinsic-sizing-...
Brandon
Reported
2024-09-10 11:47:31 PDT
Masonry rows intrinsic sizing had two issues that needed to be addressed. 1. Sizing the Grid. 2. Stretching of items.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-10 11:47:51 PDT
<
rdar://problem/135736934
>
Brandon
Comment 2
2024-09-10 12:42:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33414
EWS
Comment 3
2024-10-07 15:31:17 PDT
Committed
284790@main
(8b3d5cdb5a61): <
https://commits.webkit.org/284790@main
> Reviewed commits have been landed. Closing PR #33414 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug